fix: scrolls to header, accordion doesn't jump, url changes

--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -17,7 +17,6 @@
 .title {
   margin: 0;
   border-bottom: 1px solid $brand-200;
-  scroll-margin: 6rem;
   
   button {
     color: $brand-900;
