--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,7 +9,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
     scroll-behavior: smooth;
-    // scroll-padding-top: 2rem;
+    scroll-padding-top: 6rem;
 }
 
 a {
